--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 img[title="salmon-logo"]{
-  margin-right: 765px;
+  margin-right: 825px;
   width: 250px;
   height: auto;
 }
@@ -52,9 +52,9 @@ img[title="familyphoto"]{
 p{
   text-align: left;
   font-size: 110%;
-  font-family: 'Acme', sans-serif;
   padding: 5px;
   margin-left: 5px;
+  font-family: 'Acme', sans-serif;
 }
 
 article{
@@ -63,8 +63,8 @@ article{
   width: 50%;
   background-color: #ff775f21;
   color: #f57a61;
-  margin-right: 65px;
-  margin-top: 10px;
+  margin-right: 80px;
+  margin-top: 20px;
 }
 
 #newStoreInformation{
@@ -106,4 +106,37 @@ th{
 th,td{
   padding: 10px;
   text-align: left;
+}
+img[title="chinook"]{
+  width: 300px;
+  height: auto;
+  padding: 3px;
+  border: 3px dashed salmon;
+  margin-top: 35px;
+  margin-bottom: 10px;
+}
+hr{
+  margin-top: -65px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#contest-info{
+  float: right;
+  width: 50%;
+  background-color: #ff775f21;
+  color: #f57a61;
+  margin-right: 80px;
+  overflow: scroll;
+}
+h3{
+  font-family: 'Acme', sans-serif;
+  font-size: 150%;
+  text-decoration: underline;
+  text-align: center;
+  color: #f57a61;
+  background-color: #ffd0c769;
+  padding-bottom: 10px;
+}
+img[title="contestWinner"]{
+  margin-bottom: 60px;
 }
