--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,8 +63,10 @@ article{
   width: 50%;
   background-color: #ff775f21;
   color: #f57a61;
+  border: 3px solid salmon;
   margin-right: 80px;
   margin-top: 20px;
+  text-indent: 10px;
 }
 
 #newStoreInformation{
@@ -125,8 +127,10 @@ hr{
   width: 50%;
   background-color: #ff775f21;
   color: #f57a61;
+  border: 3px solid salmon;
   margin-right: 80px;
-  overflow: scroll;
+  margin-bottom: 50px;
+  text-indent: 10px;
 }
 h3{
   font-family: 'Acme', sans-serif;
@@ -136,7 +140,60 @@ h3{
   color: #f57a61;
   background-color: #ffd0c769;
   padding-bottom: 10px;
+  padding-top: 10px;
+}
+#storeHours{
+  width: 400px;
+  margin-left: 100px;
+  margin-top: 10px;
+  border: 3px solid salmon;
+  background-color: #ff775f21;
+  color: #EB7466;
+}
+.saleDesc{
+  text-align: center;
+  font-family: 'Acme', sans-serif;
+  box-sizing: border-box;
+  border: 2px solid salmon;
+  padding: 6px;
+  display: inline-block;
+  color: #8C1B39;
+  margin-bottom: 50px;
+}
+img[title="graphicArt"]{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+img[title="shirt"]{
+  margin-top: 20px;
 }
 img[title="contestWinner"]{
   margin-bottom: 60px;
+}
+img[title="social-media"]{
+  width: auto;
+  height: 150px;
+  padding-top: 25px;
+}
+img[title="facebook"]{
+  width: 50px;
+  height: auto;
+  padding-left: 10px;
+  padding-bottom: 50px;
+}
+img[title="instagram"]{
+  width: 50px;
+  height: auto;
+  padding-bottom: 50px;
+}
+img[title="twitter"]{
+  width: 50px;
+  height: auto;
+  padding-bottom: 50px;
+}
+footer{
+  clear: both;
+  margin-top: 150px;
+  height: 200px;
+  background-color: #FF775F;
 }
